# agentdeck

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  devlog.txt  gen-icon.ps1  package-lock.json  package.json  pnpm-lock.yaml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
scripts/: test-hermes-e2e.mjs  test-slash-commands.mjs  verify-slash-cmd.mjs
src/: app.css  app.html
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: auth.rs  events.rs  lib.rs  main.rs  session.rs  usage.rs
src-tauri/src/commands/: auth.rs  auto.rs  deps.rs  fs.rs  history.rs  learn.rs  library.rs  meta.rs  mod.rs  net.rs  sessions.rs  slash.rs
src-tauri/src/commands/core/: auth.rs  deps.rs  mod.rs  sessions.rs
src-tauri/src/commands/io/: history.rs  mod.rs  slash.rs
src-tauri/src/provider/: claude_code.rs  claude_spawn.rs  claude_stream.rs  common.rs  headless.rs  mod.rs
src-tauri/src/provider/claude/: claude_code.rs  claude_spawn.rs  claude_stream.rs  mod.rs
src-tauri/src/provider/gemini/: gemini.rs  gemini_stream.rs  mod.rs
src-tauri/src/provider/opencode/: mod.rs  opencode.rs  opencode_stream.rs
src-tauri/src/usage/: mod.rs  oauth.rs  report.rs
src/lib/: ipc.ts  updater.ts
src/lib/__tests__/: hermes.test.ts
src/lib/actions/: inView.ts  shortcuts.ts  tooltip.ts
src/lib/components/: ChatPane.svelte  Dropdown.svelte  Icon.svelte  Onboarding.svelte  ThemeToggle.svelte  (+3 more)
src/routes/: +layout.svelte  +page.svelte
src/theme/: tokens.css
(+66 files in other folders)
