[package]
name = "agentdeck"
version = "1.0.0"
description = "Application desktop pour piloter plusieurs IA en parallèle (Claude Code en premier)."
authors = ["Florent Leterme"]
edition = "2021"
license = "LicenseRef-PolyForm-Noncommercial-1.0.0"
repository = "https://github.com/LetermeFlorent/agentdeck"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "agentdeck_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-process = "2"
tauri-plugin-log = "2"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process", "io-util", "rt", "macros", "sync", "time"] }
keyring = { version = "3", features = ["windows-native"] }
uuid = { version = "1", features = ["v4"] }
parking_lot = "0.12"
dirs = "5"
base64 = "0.22"
reqwest = { version = "0.12", features = ["json"] }
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
rfd = "0.15"

# Auto-update (desktop). L'updater n'existe pas sur mobile.
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"

